# near-inlayer

./: README.md  SKILL.md
contract/src/: events.rs  execution.rs  lib.rs  views.rs
examples/kv-writer/: Cargo.toml
examples/kv-writer/src/: main.rs
examples/kv-writer/wit/: world.wit
worker/: .gitignore  Cargo.toml  LAYERD.md  README.md  SKILL.md
worker/src/: api_client.rs  config.rs  config_client.rs  lib.rs
worker/src/compiler/: mod.rs  native.rs
worker/src/daemon/: api.rs  escrow_client.rs  escrow_commands.rs  manage.rs  mod.rs  nonce.rs  nostr.rs  payment.rs  rpc_pool.rs  tunnel.rs  watcher.rs
worker/src/executor/: wasi_p1.rs  wasi_p2.rs
worker/src/outlayer_rpc/: host_functions_sync.rs  methods.rs
worker/src/outlayer_storage/: client.rs  host_functions.rs
worker/storage/: 74657374
worker/tests/: nostr_integration.rs
